--- a/example/nbc24/Cryptanalyse/on-vise-le-sommet/challenge.yaml
+++ b/example/nbc24/Cryptanalyse/on-vise-le-sommet/challenge.yaml
@@ -1,4 +1,3 @@
-# yaml-language-server: $schema=file:///home/pandatix/Documents/ctfer.io/ctfops/schema.json
 apiVersion: v1alpha1
 kind: ctfer.io/Dynamic
 spec:
@@ -15,7 +14,7 @@ spec:
   function: logarithmic
 
   requirements:
-    behavior: anonymized # XXX @pandatix this default value should take place automatically
+    behavior: anonymized
     prerequisites:
       - Cryptanalyse/boeuf-bourguignon
 
