--- a/example/nbc24/.ctfd.yaml
+++ b/example/nbc24/.ctfd.yaml
@@ -7,7 +7,7 @@ theme:
     from_file: logo.png
   small_icon:
     from_file: tab-icon.png
-  name: core
+  name: core-beta
   header:
     from_file: theme-header.html
 
