impr(example): start instances when challenge is created, stimulate networking and simulate life

--- a/example/nbc24/Pwn/ProtectedNote/challenge.yaml
+++ b/example/nbc24/Pwn/ProtectedNote/challenge.yaml
@@ -30,6 +30,7 @@ spec:
   state: visible
 
   shared: true
+  start: true
   scenario:
     apiVersion: v1alpha1
     kind: sdk.ctfer.io/kubernetes.ExposedMonopod
