--- a/example/nbc24/Pwn/Heap-er_Fort/challenge.yaml
+++ b/example/nbc24/Pwn/Heap-er_Fort/challenge.yaml
@@ -31,6 +31,7 @@ spec:
 
   timeout: 3600
   shared: true
+  start: true
   scenario:
     apiVersion: v1alpha1
     kind: sdk.ctfer.io/kubernetes.ExposedMonopod
