--- a/example/nbc24/Pwn/SuperCat/challenge.yaml
+++ b/example/nbc24/Pwn/SuperCat/challenge.yaml
@@ -27,6 +27,7 @@ spec:
   state: visible
 
   shared: true
+  start: true
   scenario:
     apiVersion: v1alpha1
     kind: sdk.ctfer.io/kubernetes.ExposedMonopod
