--- a/example/nbc24/Pwn/meshell_2/challenge.yaml
+++ b/example/nbc24/Pwn/meshell_2/challenge.yaml
@@ -31,6 +31,7 @@ spec:
   state: visible
 
   shared: true
+  start: true
   scenario:
     apiVersion: v1alpha1
     kind: sdk.ctfer.io/kubernetes.ExposedMonopod
