--- a/example/nbc24/Web3/Welcome/challenge.yaml
+++ b/example/nbc24/Web3/Welcome/challenge.yaml
@@ -25,6 +25,7 @@ spec:
 
   timeout: 3600
   shared: true
+  start: true
   scenario:
     apiVersion: v1alpha1
     kind: sdk.ctfer.io/kubernetes.ExposedMonopod
